<resources>
    <string name="app_name">Easy Permission</string>
    <string name="permission_dialog_title">我们需要获取如下权限</string>
    <string name="permission_dialog_write_external_storage">存储</string>
    <string name="permission_dialog_descript_write_external_storage">为您下载和保存文件</string>
    <string name="permission_dialog_read_phone_state">电话</string>
    <string name="permission_dialog_descript_read_phone_state">只做特征码识别，不会获取您的个人信息</string>
    <string name="permission_dialog_tips_not_harm">* 同意授权让我们更好为您服务</string>
    <string name="permission_dialog_next_step">去授权</string>
    <string name="permission_setting_explain_major_text">应用权限</string>
    <string name="permission_setting_explain_brand">Easy Permission</string>
    <string name="permission_setting_exit_uc">退出</string>
    <string name="permission_setting_goto_setting">去设置</string>
</resources>
